Fix favorites functionality - backend returns userRecipe data, frontend updates stats immediately

--- a/backend/env.example
+++ b/backend/env.example
@@ -19,6 +19,9 @@ GOOGLE_CALENDAR_CLIENT_ID=your-google-client-id
 GOOGLE_CALENDAR_CLIENT_SECRET=your-google-client-secret
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 
+# Google Places API (optional - for enhanced restaurant suggestions)
+GOOGLE_PLACES_API_KEY=your-google-places-api-key
+
 # External Recipe APIs (for future use)
 SPOONACULAR_API_KEY=your-spoonacular-api-key
 EDAMAM_API_KEY=your-edamam-api-key
