--- a/backend/.env
+++ b/backend/.env
@@ -18,3 +18,6 @@ CORS_ORIGIN=http://localhost:3000
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Google Places API (optional - for enhanced restaurant suggestions)
+GOOGLE_PLACES_API_KEY=AIzaSyBB81TK4M89-lpJGglDO017I_vEWIqLVo8
