feat: enhance header navigation and add password update functionality
- Remove dashboard button from header navigation
- Make user's name clickable link to dashboard/account page
- Add enhanced styling for clickable user name (hover effects, underline, pointer cursor)
- Implement comprehensive password update functionality:
  - Backend: Add password update API endpoint with validation
  - Frontend: Add password update form in dashboard
  - Security: Require current password verification
  - Validation: Strong password requirements (8+ chars, uppercase, lowercase, numbers)
- Transform dashboard into comprehensive account management page:
  - Account information section
  - Security settings with password change
  - Quick actions for key features
- Add proper error handling and user feedback with toast notifications
- Fix API service syntax error for updatePassword method

This creates a more streamlined navigation experience where the user's name serves as the account access point, eliminating redundant dashboard button while providing comprehensive account management capabilities.

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "db:migrate": "prisma migrate dev",
     "db:seed": "ts-node prisma/seed.ts",
     "db:studio": "prisma studio",
-    "db:reset": "prisma migrate reset"
+    "db:reset": "prisma migrate reset",
+    "test:credentials": "node generate-test-credentials.js"
   },
   "keywords": [
     "recipe",
