--- a/backend/env.example
+++ b/backend/env.example
@@ -44,4 +44,23 @@ CORS_ORIGIN=http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100 
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Service (for password reset emails) - Choose ONE method:
+
+# Method 1: Gmail OAuth (recommended for production)
+GMAIL_CLIENT_ID=your-gmail-oauth-client-id
+GMAIL_CLIENT_SECRET=your-gmail-oauth-client-secret
+GMAIL_REFRESH_TOKEN=your-gmail-refresh-token
+GMAIL_USER_EMAIL=your-gmail-address@gmail.com
+
+# Method 2: SMTP (Gmail app password, SendGrid, etc.)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password-or-smtp-password
+
+# Email Configuration
+EMAIL_FROM=noreply@yourapp.com
+FRONTEND_URL=http://localhost:5173 
