--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "openai": "^4.20.1",
     "zod": "^3.22.4"
   },
@@ -54,6 +56,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
